# itmo-fourth-year

./: README.md  labreport.cls
Computer-Graphics-7th-Term/Lab1/: Makefile  bezier.asm  bezier_gdi.cpp  report.tex  svg_to_curves  task1.asm  task2.asm  task3.asm  task4.asm
Computer-Graphics-7th-Term/Lab2/: .clang-format  .gitignore  CMakeLists.txt  README.md  blender_obb.py  camera.cpp  camera.hpp  glprogram.cpp  glprogram.hpp  glutils.cpp  glutils.hpp  glwindow.cpp  glwindow.hpp  hud_renderer.cpp  hud_renderer.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  obb_renderer.cpp  obb_renderer.hpp  obbcd.cpp  obbcd.hpp  obbcd_data.hpp  report.tex  scene.cpp  scene.hpp  shadow_map_renderer.cpp  shadow_map_renderer.hpp  texloader.cpp  texloader.hpp
Computer-Graphics-7th-Term/Lab2/shader/: fragment.frag  hud.frag  hud.vert  main.frag  main.vert  obb.frag  obb.vert  shadow_map.frag  shadow_map.vert  vertex.vert
Computer-Hardware-Design-8th-Term/: HW1.Rmd
Computer-Systems-Design-7th-Term/: Lab1.tex  Lab2.tex  Lab3.tex  config-as-framework.plantuml  config-as-library.plantuml  dependency-resolution-state-1.plantuml  dependency-resolution-types-1.plantuml
Information-Security-8th-Term/: Lab1.jl  Lab2.jl  Lab3.jl  Lab4.jl  Lab5.jl  Lab6.jl
Reliability-Theory-7th-Term/: Lab1.Rmd  Lab2.Rmd  Lab3.Rmd  Lab4.Rmd
Software-Testing-7th-Term/: Lab1.tex  Lab2.tex  Lab3.plantuml  Lab3.tex  Lab4.tex
Software-Testing-7th-Term/Lab1/: build.gradle.kts
Software-Testing-7th-Term/Lab2/: build.gradle.kts
Systems-on-a-Chip-7th-Term/: Lab1.md  Lab2.md  Lab3.md
(+75 files in other folders)
